--- a/profiles/templates/profiles/register.html
+++ b/profiles/templates/profiles/register.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Update Profile</h2>
+  <h2>Register</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     {{ profile_form.as_p }}
-    <button type="submit">Update</button>
+    <button type="submit">Register</button>
   </form>
 {% endblock %}
