--- a/profiles/templates/profiles/verity_otp.html
+++ b/profiles/templates/profiles/verity_otp.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-
 {% block content %}
   <h2>Verify OTP</h2>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
+    <label for="otp">Enter the OTP sent to your email:</label>
+    <input type="text" name="otp" required>
+    <button type="submit">Verify</button>
   </form>
 {% endblock %}
