--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,11 @@
         <li class="dropdown">
           <a href="#">Dropdown 1</a>
           <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </ul>
           </div>
         </li>
         <li class="mega-dropdown">
