--- a/profiles/templates/profiles/register.html
+++ b/profiles/templates/profiles/register.html
@@ -4,6 +4,7 @@
   <h2>Register</h2>
   <form method="post">
     {% csrf_token %}
+    {% bootstrap_form form %}
     {{ form.as_p }}
     {{ profile_form.as_p }}
     <button type="submit">Register</button>
