--- a/profiles/templates/profiles/update_profile.html
+++ b/profiles/templates/profiles/update_profile.html
@@ -5,6 +5,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
+    {% bootstrap_form form %}
     {{ profile_form.as_p }}
     <button type="submit">Update</button>
   </form>
