--- a/profiles/templates/profiles/login.html
+++ b/profiles/templates/profiles/login.html
@@ -4,6 +4,7 @@
   <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
+    {% bootstrap_form %}
     {{ form.as_p }}
     <div class="g-recaptcha" data-sitekey="{{ recaptcha_public_key }}"></div>
     <button type="submit">Login</button>
