--- a/profiles/templates/profiles/create_profile.html
+++ b/profiles/templates/profiles/create_profile.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load django_bootstrap5 %}
 {% block content %}
   <h2>Create Profile</h2>
   <form method="post" enctype="multipart/form-data">
