--- a/profiles/templates/profiles/delete_profile.html
+++ b/profiles/templates/profiles/delete_profile.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
-
+{% load django_bootstrap5 %}
 {% block content %}
   <h2>Delete Profile</h2>
   <p>Are you sure you want to delete your profile?</p>
   <form method="post">
     {% csrf_token %}
+    {% bootstrap_form form %}
     <button type="submit">Yes, delete my profile</button>
     <a href="{% url 'login_app:profile_detail' %}">No, go back to my profile</a>
   </form>
