--- a/profiles/templates/profiles/profile_detail.html
+++ b/profiles/templates/profiles/profile_detail.html
@@ -3,11 +3,10 @@
 {% block content %}
   <h2>Profile Detail</h2>
   <ul>
-    <li>Username: {{ user.username }}</li>
-    <li>First Name: {{ user.first_name }}</li>
-    <li>Last Name: {{ user.last_name }}</li>
-    <li>Email: {{ user.email }}</li>
-    <li>Phone Number: {{ user_profile.phone_number }}</li>
+    <li><strong>Name:</strong> {{ user.first_name }} {{ user.last_name }}</li>
+    <li><strong>Email:</strong> {{ user.email }}</li>
+    <li><strong>CID:</strong> {{ CID }}</li>
+    <li><strong>Phone Number:</strong> {{ Phone_number }}</li>
   </ul>
   <a href="{% url 'login_app:update_profile' %}">Edit Profile</a>
 {% endblock %}
