--- a/profiles/templates/profiles/register.html
+++ b/profiles/templates/profiles/register.html
@@ -8,8 +8,8 @@
         <form method="post">
           {% csrf_token %}
           {% bootstrap_form form %}
-          {{ form.as_p }}
-          {{ profile_form.as_p}}
+          {{ user_form.as_p }}
+          {{ profile_form.as_p }}
           <button type="submit" class="btn btn-primary mt-3">Register</button>
         </form>
       </div>
